[project]
name = "experiment-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "a2a-sdk @ git+https://github.com/google/a2a-python.git",
    "uvicorn==0.34.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
